src/objects/Assessment_NF__c.object
<CustomObject>
    <fields>
        <fullName>Justice_Legal_Service_Organisation_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Justice/Legal Service Organisation Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Justice/Legal Service Organisation Name)</relationshipLabel>
        <relationshipName>Assessments_National_Framework9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Justice_Legal_Service_Organisation_Phone__c</fullName>
        <formula>Justice_Legal_Service_Organisation_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Justice/Legal Service Organisation Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_term_goals_re_Drugs__c</fullName>
        <label>Long term goals re-Drugs</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MH_Organisation_Phone__c</fullName>
        <formula>Mental_Health_Service_Organisation_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MH Organisation Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Case_live__c</fullName>
        <label>Mental Health Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Intervention_supports__c</fullName>
        <label>Mental Health Intervention / supports</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Service_Name__c</fullName>
        <label>Mental Health Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Service_Organisation_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mental Health Service Organisation Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Mental Health Service Organisation Name)</relationshipLabel>
        <relationshipName>Assessments_National_Framework1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Service_Organisation__c</fullName>
        <label>Mental Health Service Organisation (Old)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Concerns_in_relation_to_Income__c</fullName>
        <inlineHelpText>Needs, Concerns and relevant case history? Income and Financial Situation</inlineHelpText>
        <label>Needs/Concerns in relation to Income</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Concerns_in_relation_to_employment__c</fullName>
        <inlineHelpText>Detail needs and concerns and relevant case history?</inlineHelpText>
        <label>Needs/Concerns in relation to employment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_around_depression_anxiety_esteem__c</fullName>
        <inlineHelpText>Needs around depression, anxiety, general esteem etc?</inlineHelpText>
        <label>Needs around depression, anxiety, esteem</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_concerns_related_to_legal_issues__c</fullName>
        <label>Needs/concerns related to legal issues</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_in_relation_to_further_education__c</fullName>
        <label>Needs in relation to further education</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_related_to_mental_health_wellbeing__c</fullName>
        <inlineHelpText>Needs in relation to mental health / wellbeing?</inlineHelpText>
        <label>Needs related to mental health/wellbeing</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_days_alcohol_was_consumed__c</fullName>
        <inlineHelpText>Number of days alcohol was consumed over the past month?   …….......… (if none, put 0)</inlineHelpText>
        <label>Number of days alcohol was consumed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_1__c</fullName>
        <label>Objective 1:</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_2__c</fullName>
        <label>Objective 2:</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_3__c</fullName>
        <label>Objective 3:</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_alcohol_specify__c</fullName>
        <label>Other alcohol specify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_housing_needs__c</fullName>
        <label>Other housing needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_O1__c</fullName>
        <label>Outcome - O1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_O2__c</fullName>
        <label>Outcome - O2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_O3__c</fullName>
        <label>Outcome - O3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outstanding_debts_is_this_related_to__c</fullName>
        <inlineHelpText>Outstanding debts (what is this related to; i.e. general expenses, drugs, gambling etc)?</inlineHelpText>
        <label>Outstanding debts (is this related to?)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outstanding_warrants_or_charges__c</fullName>
        <label>Outstanding warrants or charges?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <formula>Client__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone number:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_ID__c</fullName>
        <label>Photo ID?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Case_live__c</fullName>
        <label>Physical Health Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Intervention_supports__c</fullName>
        <label>Physical Health Intervention / supports</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Organisation_Phone__c</fullName>
        <formula>Physical_Health_Serv_Organisation_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Health Organisation Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Serv_Organisation_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physical Health Serv. Organisation Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Physical Health Serv. Organisation Name)</relationshipLabel>
        <relationshipName>Assessments_National_Framework2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Service_Name__c</fullName>
        <label>Physical Health Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Service_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physical Health Service Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework)</relationshipLabel>
        <relationshipName>Assessments_National_Framework</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_information_on_sexual_health__c</fullName>
        <label>Received information on sexual health?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to_name_agency_of_worker_O1__c</fullName>
        <label>Referred to (name &amp; agency of worker)-O1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_to_name_agency_of_worker_O2__c</fullName>
        <label>Referred to (name &amp; agency of worker)-O2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_to_name_agency_of_worker_O3__c</fullName>
        <label>Referred to (name &amp; agency of worker)-O3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_of_harm_through_violence_and_plan__c</fullName>
        <inlineHelpText>Check:
- Any history of violence towards others?
- Any recent history or risk of violence from others to self?
- Any experience of domestic violence?</inlineHelpText>
        <label>Risk of harm through violence and plan</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_of_harm_to_self_please_detail__c</fullName>
        <label>Risk of harm to self, please detail:</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rough_sleeping__c</fullName>
        <label>Rough sleeping</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Route_of_Trans_Drug_1__c</fullName>
        <label>Route of Trans - Drug 1</label>
        <picklist>
            <picklistValues>
                <fullName>1. inject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. smoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. eat/drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. sniff/snort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. sublingual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. rectal topical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route_of_Trans_Drug_2__c</fullName>
        <label>Route of Trans - Drug 2</label>
        <picklist>
            <picklistValues>
                <fullName>1. inject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. smoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. eat/drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. sniff/snort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. sublingual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. rectal topical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route_of_Trans_Drug_3__c</fullName>
        <label>Route of Trans - Drug 3</label>
        <picklist>
            <picklistValues>
                <fullName>1. inject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. smoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. eat/drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. sniff/snort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. sublingual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. rectal topical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Supports_Case_live__c</fullName>
        <label>Social Supports Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Supports_Intervention_support__c</fullName>
        <label>Social Supports Intervention/support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Supports_Service_Name__c</fullName>
        <label>Social Supports Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Supports_Service_Org_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social Supports Service Org. Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Social Supports Service Org. Name)</relationshipLabel>
        <relationshipName>Assessments_National_Framework8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Supports_Service_Org_Phone__c</fullName>
        <formula>Social_Supports_Service_Org_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Supports Service Org. Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_outlets_activities_old_or_new__c</fullName>
        <label>Social outlets/activities - old or new?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Social_supports_old_or_new__c</fullName>
        <label>Social supports – old or new?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sources_of_income_and_weekly_income__c</fullName>
        <label>Sources of income and weekly income</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specify_main_type_of_alcohol_consumed__c</fullName>
        <label>Specify main type of alcohol consumed:</label>
        <picklist>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fortified wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>alcopops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_Accom__c</fullName>
        <label>Support is required in this area - Accom</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_E_T__c</fullName>
        <inlineHelpText>What supports / progress is required in Education/Training (short term)?</inlineHelpText>
        <label>Support is required in this area - E/T</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_Emp__c</fullName>
        <inlineHelpText>What supports / progress is required in Employment (short term)</inlineHelpText>
        <label>Support is required in this area - Emp</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_F_R__c</fullName>
        <inlineHelpText>Are supports needed to assist in strengthening relationships (partner, spouse family?)</inlineHelpText>
        <label>Support is required in this area - F&amp;R</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_In_Fi__c</fullName>
        <inlineHelpText>What supports / progress are required in Income/Financial (short term)?</inlineHelpText>
        <label>Support is required in this area - In/Fi</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_Jus_Leg__c</fullName>
        <inlineHelpText>What support / progress is required in Justice and Legal (short term)?</inlineHelpText>
        <label>Support is required in this area-Jus/Leg</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_PH__c</fullName>
        <inlineHelpText>What progress / support is required in this area (short term goals)?
NOTE: If no medical card, then this is a priority.</inlineHelpText>
        <label>Support is required in this area - PH</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_PM__c</fullName>
        <inlineHelpText>What supports / progress are required in this area?
Taking your prescribed medication</inlineHelpText>
        <label>Support is required in this area - PM</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_is_required_in_this_area_So_Su__c</fullName>
        <inlineHelpText>What supports / progress is required in Social Supports (short term)?</inlineHelpText>
        <label>Support is required in this area - So/Su</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_progress_are_required_MHW__c</fullName>
        <label>Supports/progress are required - MHW</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_progress_required_Alcohol__c</fullName>
        <label>Supports/progress required -Alcohol</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_progress_required_Drug__c</fullName>
        <inlineHelpText>What supports / progress are required in this area (shorter term)?</inlineHelpText>
        <label>Supports/progress required - Drug</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timescale_O1__c</fullName>
        <label>Timescale - O1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timescale_O2__c</fullName>
        <label>Timescale - O2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timescale_O3__c</fullName>
        <label>Timescale - O3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_court_dates__c</fullName>
        <label>Upcoming court dates.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_describe_themselves_in_area_Drug__c</fullName>
        <inlineHelpText>How does the service user describe themselves in relation to this area on a scale of one to ten where:
1-3 = Unhappy with current situation
4-6 = Currently working on changing the situation
7-10 = Happy with changes and situation</inlineHelpText>
        <label>User describe themselves in area Drugs</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_describe_themselves_in_area_Drugs__c</fullName>
        <inlineHelpText>How does the service user describe themselves in relation to this area on a scale of one to ten where:
1-3 = Unhappy with current situation
4-6 = Currently working on changing the situation
7-10 = Happy with changes and situation</inlineHelpText>
        <label>User describe themselves in area Health</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_describe_themselves_in_area_E_T__c</fullName>
        <inlineHelpText>How does the service user describe themselves in relation to this area on a scale of one to ten where:
1-3 = Unhappy with current situation
4-6 = Currently working on changing the situation
7-10 = Happy with changes and situation</inlineHelpText>
        <label>User describe themselves in area - E/T</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_describe_themselves_in_area_Emplo__c</fullName>
        <inlineHelpText>How does the service user describe themselves in relation to this area on a scale of one to ten where:
1-3 = Unhappy with current situation
4-6 = Currently working on changing the situation
7-10 = Happy with changes and situation</inlineHelpText>
        <label>User describe themselves in area - Emplo</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_describe_themselves_in_area_F_R__c</fullName>
        <inlineHelpText>How does the service user describe themselves in relation to this area on a scale of one to ten where:
1-3 = Unhappy with current situation
4-6 = Currently working on changing the situation
7-10 = Happy with changes and situation</inlineHelpText>
        <label>User describe themselves in area - F&amp;R</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_describe_themselves_in_area_In_Fi__c</fullName>
        <inlineHelpText>How does the service user describe themselves in relation to this area on a scale of one to ten where:
1-3 = Unhappy with current situation
4-6 = Currently working on changing the situation
7-10 = Happy with changes and situation</inlineHelpText>
        <label>User describe themselves in area - In/Fi</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_describe_themselves_in_area_Just_Le__c</fullName>
        <inlineHelpText>Justice and Legal
How does the service user describe themselves in relation to this area on a scale of one to ten where:
1-3 = Unhappy with current situation
4-6 = Currently working on changing the situation
7-10 = Happy with changes and situation</inlineHelpText>
        <label>User describe themselves in area-Just/Le</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_describe_themselves_in_area_So_Su__c</fullName>
        <inlineHelpText>Social Supports
How does the service user describe themselves in relation to this area on a scale of one to ten where:
1-3 = Unhappy with current situation
4-6 = Currently working on changing the situation
7-10 = Happy with changes and situation</inlineHelpText>
        <label>User describe themselves in area - So/Su</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_are_the_reasons_for_referral__c</fullName>
        <inlineHelpText>What are the primary reasons for your referral / accessing of this service?</inlineHelpText>
        <label>What are the reasons for referral</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_are_your_main_priorities__c</fullName>
        <inlineHelpText>What are your main priorities over the next three months, until your next care plan review?</inlineHelpText>
        <label>What are your main priorities?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_contributed_thing_not_getting_done__c</fullName>
        <inlineHelpText>What contributed to things not getting done?</inlineHelpText>
        <label>What contributed thing not getting done?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_contributed_to_things_going_well__c</fullName>
        <label>What contributed to things going well?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_needs_to_happen_for_goals_achieved__c</fullName>
        <inlineHelpText>What needs to happen for actions and goals to be achieved?</inlineHelpText>
        <label>What needs to happen for goals achieved?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_have_you_last_had_a_breast_check__c</fullName>
        <inlineHelpText>(women only) When have you last had a breast check?</inlineHelpText>
        <label>When have you last had a breast check?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_have_you_last_had_a_smear_test__c</fullName>
        <inlineHelpText>(women only) When have you last had a smear test?</inlineHelpText>
        <label>When have you last had a smear test?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_was_your_last_sexual_health_checkup__c</fullName>
        <label>When was your last sexual health checkup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_children_are_living_with_you__c</fullName>
        <label>Which children are living with you?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_will_be_contacted__c</fullName>
        <inlineHelpText>Who will be contacted in regard to this information?</inlineHelpText>
        <label>Who will be contacted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_History__c</fullName>
        <label>Work History</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_to_be_done_to_achieve_objective_O1__c</fullName>
        <label>Work to be done to achieve objective -O1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>